@@ -2,13 +2,14 @@
 abstract: 'Dynamically create Perl language bindings'
 author:
   - 'Glib::Object::Introspection Team <gtk-perl-list at gnome dot org>'
-build_requires: {}
+build_requires:
+  ExtUtils::MakeMaker: 0
 configure_requires:
   ExtUtils::Depends: 0.3
   ExtUtils::PkgConfig: 1
   Glib: 1.28
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.64, CPAN::Meta::Converter version 2.112621'
+generated_by: 'ExtUtils::MakeMaker version 6.68, CPAN::Meta::Converter version 2.131560'
 license: lgpl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -24,11 +25,13 @@ no_index:
     - MY
     - Glib::Object::Introspection::_FuncWrapper
 requires:
+  ExtUtils::Depends: 0.3
+  ExtUtils::PkgConfig: 1
   Glib: 1.28
 resources:
+  MailingList: https://mail.gnome.org/mailman/listinfo/gtk-perl-list
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Glib-Object-Introspection
   homepage: http://gtk2-perl.sourceforge.net
   license: http://www.gnu.org/licenses/lgpl-2.1.html
   repository: git://git.gnome.org/perl-Glib-Object-Introspection
-  x_MailingList: https://mail.gnome.org/mailman/listinfo/gtk-perl-list
-version: 0.015
+version: 0.016
